--- a/source/main.html
+++ b/source/main.html
@@ -7,11 +7,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body class="main-background">
+<body>
   <div style="display: none;">
     <include src="build/img/sprite.svg"></include>
   </div>
-  <div class="main-background__wrapper">
+  <div class="main-background">
     <header class="page-header page-header--close">
       <div class="page-header__wrapper page-header__wrapper--main">
         <p class="page-header__logo">
